[package]
name = "remap"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.1.4", features=['derive']}
ctrlc = "3.2.4"
# lazy_static = "1.4.0"
byteorder = "1.4.3"
image = "0.24.5"
minifb = "0.23.0"
dotenv = "0.15.0"
# winit = "0.28.1"
# softbuffer = {git = "https://github.com/rust-windowing/softbuffer" }
anyhow = "1.0.69"
flume = "0.10.14"


[target.'cfg(windows)'.dependencies]

[target.'cfg(unix)'.dependencies]
enigo = { git = "https://github.com/sganis/enigo" }
xcb = "1.2.0"



