[workspace]
members = ["protocol", "client", "server"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
byteorder = "1.5"
flume = "0.11"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
clap = { version = "4.1.4", features = ["derive"] }
image = "0.25"
regex = "1"
