[package]
name = "remap"
version = "0.1.0"
edition = "2021"

# Two binaries in one crate
[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
# Optional: require a feature so 'cargo build' on mac doesn't even try to build server.
# required-features = ["server"]

[features]
# Enable this if you want to force-build the Linux server (not needed if you rely on cfg(target_os))
server = []

[dependencies]
anyhow = "1"
flume = "0.11"
byteorder = "1.5"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
regex = "1"
minifb = "0.28"
clap = { version = "4.5", features = ["derive"] }

# Linux-only deps (server capture/injection; not pulled on macOS/Windows)
[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1.2.0", features = ["damage", "xfixes", "xtest"] }
