[package]
name = "remap"
version.workspace = true
edition.workspace = true

[dependencies]
remap-protocol = { path = "../protocol" }
anyhow.workspace = true
byteorder.workspace = true
flume.workspace = true
log.workspace = true
env_logger.workspace = true
dotenv.workspace = true
clap.workspace = true
regex.workspace = true

# Use GitHub version of minifb (or "0.25" from crates.io)
minifb = "0.28"
