[package]
name = "xrs"
version = "0.1.0"
edition = "2021"

[dependencies]
glib = "0.16.7"
gtk = { version = "0.5.5", package = "gtk4" }
gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs/", package="gstreamer" }
gst-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", package="gstreamer-video" }
