[package]
name = "control"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
crossterm = { version = "0.23", features = ["event-stream"] }

[target.'cfg(target_os = "linux")'.dependencies]
# enigo = { git = "https://github.com/sganis/enigo" }
# enigo = { path = "../../enigo" }

