[package]
name = "remap-server"
version.workspace = true
edition.workspace = true

[features]
xtest = []            # enable XTest input injection (optional)

[dependencies]
remap-protocol = { path = "../protocol" }
anyhow.workspace = true
byteorder.workspace = true
flume.workspace = true
log.workspace = true
env_logger.workspace = true
image.workspace = true
regex.workspace = true

# Linux-only deps
[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1.2.0", features = ["damage", "xfixes", "xtest"] }
