[package]
name = "tunnel"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
dotenvy = "0.15"
dirs = "6.0.0"
ssh2 = "0.9.5"
socket2 = "0.6.0"
